--- a/views/main.html
+++ b/views/main.html
@@ -22,6 +22,10 @@
                             <th>Sala</th>
                             <th>Pessoas</th>
                             <th>Entrar</th>
+                            <th>Convidar Amigos</th>
+                            <th>Sair</th>
+
+                            
                         </tr>
                     </thead>
                     <tbody>
